login with different role
login with owner , member and agent

--- a/src/app/components/agent.component.html
+++ b/src/app/components/agent.component.html
@@ -1,6 +1,6 @@
 <div class="animated fadeIn">
   
-  <div class="row">
+  <!-- <div class="row">
       <div class="col">
     <div ngbDropdown class="d-inline-block col-sm-12">
       <button class="btn btn-outline-primary" id="sortMenu" ngbDropdownToggle>{{selectedSortOrder}}</button>
@@ -8,20 +8,19 @@
         <button  class="dropdown-item" *ngFor="let sortOrder of sortOrders" (click)="ChangeSortOrder(sortOrder)" >{{sortOrder}}</button>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 
   
  </div><!--/.row-->
 
-
+<!-- 
 <br />
  <div class="example-container mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource">
 
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
+    <!-- Checkbox Column 
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null"
                       [checked]="selection.hasValue() && isAllSelected()"
@@ -36,25 +35,24 @@
       </mat-cell>
     </ng-container>
 
-    <!-- Position Column -->
+ 
     <ng-container matColumnDef="code">
       <mat-header-cell  *matHeaderCellDef> Code </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.code}} </mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="plotNumber">
       <mat-header-cell *matHeaderCellDef> Plot No. </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.plotNumber}} </mat-cell>
     </ng-container>
 
-    <!-- Weight Column -->
+   
     <ng-container matColumnDef="netSize">
       <mat-header-cell *matHeaderCellDef> Net Size </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.netSize}} </mat-cell>
     </ng-container>
 
-    <!-- Symbol Column -->
+  
     <ng-container matColumnDef="sectorName">
       <mat-header-cell *matHeaderCellDef> Sector </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.sectorName}} </mat-cell>
@@ -74,4 +72,4 @@
     <button class="btn btn-primary" type="button" (click)="saveData()">Save</button>
   </div>
  </div>
- 
+  -->
