--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -20,8 +20,11 @@
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="icon-speedometer"></i> Dashboard </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/components/agent']"><i class="icon-people"></i> {{userType}} </a>
-         </li>
+          <a class="nav-link" *ngIf="userType.includes('Agent')" routerLinkActive="active" [routerLink]="['/components/agent']"><i class="icon-people"></i> Agent </a>
+          <a class="nav-link" *ngIf="userType.includes('Member')" routerLinkActive="active" [routerLink]="['/components/member']"><i class="icon-people"></i> Member </a>
+          <a class="nav-link" *ngIf="userType.includes('Owner')" routerLinkActive="active" [routerLink]="['/components/owner']"><i class="icon-people"></i> Owner </a>
+         
+        </li>
       </ul>
     </nav>
   </div>
