added filter pipe
added pipe filter to replace empty data with string

--- a/src/app/components/agent.component.html
+++ b/src/app/components/agent.component.html
@@ -1,5 +1,5 @@
 <div class="animated fadeIn">
-  
+  agent works!
   <!-- <div class="row">
       <div class="col">
     <div ngbDropdown class="d-inline-block col-sm-12">
@@ -20,7 +20,7 @@
  <div class="example-container mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource">
 
-    <!-- Checkbox Column 
+     
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null"
                       [checked]="selection.hasValue() && isAllSelected()"
